--- a/src/app/pages/impresion-credencial/impresion-credencial.component.html
+++ b/src/app/pages/impresion-credencial/impresion-credencial.component.html
@@ -1,15 +1,18 @@
-<div class="container  py-5 mx-auto">
+<div class="container py-5 mx-auto">
   <div class="px-6 pt-4 mb-5 bg-white border-0 shadow-lg sm:rounded-3xl">
-
     <div class="flex items-center justify-between">
-      <form [formGroup]="formImpresion" class="flex items-center justify-between flex-wrap gap-2">
-
+      <form
+        [formGroup]="formImpresion"
+        class="flex items-center justify-between flex-wrap gap-2"
+      >
         <mat-form-field class="w-100">
           <mat-label>Impresoras</mat-label>
           <mat-select formControlName="impresora">
             <mat-option value="">- Selecciona una opción -</mat-option>
             @for (impresora of printers; track impresora) {
-            <mat-option [value]="impresora.name">{{impresora.name}}</mat-option>
+            <mat-option [value]="impresora.name">{{
+              impresora.name
+            }}</mat-option>
             }
           </mat-select>
         </mat-form-field>
@@ -17,87 +20,91 @@
         <mat-form-field>
           <mat-label>Fecha de registro</mat-label>
           <mat-date-range-input [rangePicker]="picker">
-            <input matStartDate formControlName="fechaInicio" placeholder="Inicio">
-            <input matEndDate formControlName="fechaFin" placeholder="Fin">
+            <input
+              matStartDate
+              formControlName="fechaInicio"
+              placeholder="Inicio"
+            />
+            <input matEndDate formControlName="fechaFin" placeholder="Fin" />
           </mat-date-range-input>
           <mat-hint>DD/MM/YYYY – DD/MM/YYYY</mat-hint>
-          <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker-toggle
+            matIconSuffix
+            [for]="picker"
+          ></mat-datepicker-toggle>
           <mat-date-range-picker #picker></mat-date-range-picker>
         </mat-form-field>
 
+        <mat-form-field class="w-100">
+          <mat-label>Buscar</mat-label>
+          <input
+            matInput
+            formControlName="search"
+            placeholder="Buscar..."
+            (keyup.enter)="getAspirantesBeneficio()"
+          />
+        </mat-form-field>
+      </form>
+    </div>
+  </div>
 
-  <!-- <h2>Seleccionar Impresora</h2>
-  <label for="printers">Impresoras Disponibles:</label>
-  <select id="printers" [(ngModel)]="selectedPrinter">
-    <option *ngFor="let printer of printers" [value]="printer.name">
-      {{ printer.name }}
-    </option>
-  </select>
-  <br /><br />
-  <h3>Datos de la Credencial</h3>
-  <p><strong>Nombre:</strong> {{ userData.name }}</p>
-  <p><strong>CURP:</strong> {{ userData.curp }}</p>
-  <p><strong>Teléfono:</strong> {{ userData.phone }}</p>
-  <p><strong>Expedición:</strong> {{ userData.issueDate }}</p>
-  <p><strong>N° Tarjeta:</strong> {{ userData.cardNumber }}</p>
-  <img [src]="userData.photoPath" alt="Foto del Usuario" width="100" height="100" />
-  <br /><br /> -->
-
-  <mat-form-field class="w-100">
-    <mat-label>Buscar</mat-label>
-    <input matInput formControlName="search" placeholder="Buscar..." (keyup.enter)="getAspirantesBeneficio()">
-  </mat-form-field>
-
-  <!-- <button (click)="print()">Imprimir Credencial</button> -->
-
-</form>
-</div>
-</div>
-
-<div class="px-6 py-5 bg-white border-0 shadow-lg sm:rounded-3xl">
-  <div class="flex justify-between items-center mb-2">
-    <div class="flex justify-start items-center gap-5">
-      <!-- <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded"
+  <div class="px-6 py-5 bg-white border-0 shadow-lg sm:rounded-3xl">
+    <div class="flex justify-between items-center mb-2">
+      <div class="flex justify-start items-center gap-5">
+        <!-- <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded"
         [disabled]="!generado || loading" (click)="downloadExcel()">Descargar XLSX</button>
       <button class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded"
         [disabled]="!generado || loading" (click)="downloadPdf()">Descargar PDF</button> -->
+      </div>
+
+      <div class="flex justify-start items-center gap-5">
+        <button
+          (click)="formImpresion.reset()"
+          class="bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded flex items-center justify-between gap-2"
+          [disabled]="!generado || loading"
+        >
+          <mat-icon matSuffix>clear_all</mat-icon>
+          <span>Limpiar campos</span>
+        </button>
+
+        <button
+          (click)="getAspirantesBeneficio()"
+          class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded flex justify-between items-center gap-2"
+        >
+          <span> Consultar </span>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-right-to-arc"
+          >
+            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+            <path d="M3 12h12" />
+            <path d="M11 8l4 4l-4 4" />
+            <path d="M12 21a9 9 0 0 0 0 -18" />
+          </svg>
+        </button>
+      </div>
     </div>
 
-    <div class="flex justify-start items-center gap-5">
-      <button (click)="formImpresion.reset()"
-        class="bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded flex items-center justify-between gap-2"
-        [disabled]="!generado || loading">
-        <mat-icon matSuffix>clear_all</mat-icon>
-        <span>Limpiar campos</span>
-      </button>
-
-      <button (click)="getAspirantesBeneficio()"
-        class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded flex justify-between items-center gap-2">
-        <span>
-          Consultar
-        </span>
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-          stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-          class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-right-to-arc">
-          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-          <path d="M3 12h12" />
-          <path d="M11 8l4 4l-4 4" />
-          <path d="M12 21a9 9 0 0 0 0 -18" />
-        </svg>
-      </button>
+    <div *ngIf="loading; else loaded">
+      <mat-spinner class="mx-auto my-5"></mat-spinner>
     </div>
-  </div>
 
-  <div *ngIf="loading; else loaded">
-    <mat-spinner class="mx-auto my-5"></mat-spinner>
-  </div>
-
-  <ng-template #loaded>
-    <div class="table-container mat-elevation-z8" style="background-color: white;">
-      <table mat-table [dataSource]="dataSource" matSort>
-
-        <!-- Impreso -->
-        <!-- <ng-container matColumnDef="impreso">
+    <ng-template #loaded>
+      <div
+        class="table-container mat-elevation-z8"
+        style="background-color: white"
+      >
+        <table mat-table [dataSource]="dataSource" matSort>
+          <!-- Impreso -->
+          <!-- <ng-container matColumnDef="impreso">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>
             <mat-icon aria-hidden="false" aria-label="Impreso"
               fontIcon="credit_card">Impreso</mat-icon>
@@ -114,79 +121,89 @@
           </td>
         </ng-container> -->
 
-        <!-- CURP -->
-        <ng-container matColumnDef="curp">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>CURP</th>
-          <td mat-cell *matCellDef="let row"> {{row.curp}} </td>
-        </ng-container>
+          <!-- CURP -->
+          <ng-container matColumnDef="curp">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>CURP</th>
+            <td mat-cell *matCellDef="let row">{{ row.curp }}</td>
+          </ng-container>
 
-        <!-- Nombre -->
-        <ng-container matColumnDef="nombre_completo">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre</th>
-          <td mat-cell *matCellDef="let row"> {{row.nombre_completo}}</td>
-        </ng-container>
+          <!-- Nombre -->
+          <ng-container matColumnDef="nombre_completo">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre</th>
+            <td mat-cell *matCellDef="let row">{{ row.nombre_completo }}</td>
+          </ng-container>
 
-        <!-- Modalidad -->
-        <ng-container matColumnDef="nombre_modalidad">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Modalidad</th>
-          <td mat-cell *matCellDef="let row"> {{row.nombre_modalidad}} </td>
-        </ng-container>
+          <!-- Modalidad -->
+          <ng-container matColumnDef="nombre_modalidad">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Modalidad</th>
+            <td mat-cell *matCellDef="let row">{{ row.nombre_modalidad }}</td>
+          </ng-container>
 
-        <!-- Modulo -->
-        <ng-container matColumnDef="modulo">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Módulo</th>
-          <td mat-cell *matCellDef="let row"> {{row.modulo}} </td>
-        </ng-container>
+          <!-- Modulo -->
+          <ng-container matColumnDef="modulo">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Módulo</th>
+            <td mat-cell *matCellDef="let row">{{ row.modulo }}</td>
+          </ng-container>
 
-        <!-- Fecha de registro -->
-        <ng-container matColumnDef="fecha_evento">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Fecha de registro</th>
-          <td mat-cell *matCellDef="let row"> {{row.fecha_evento | date:'dd/MM/yyyy'}} </td>
-        </ng-container>
+          <!-- Fecha de registro -->
+          <ng-container matColumnDef="fecha_evento">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>
+              Fecha de registro
+            </th>
+            <td mat-cell *matCellDef="let row">
+              {{ row.fecha_evento | date : "dd/MM/yyyy" }}
+            </td>
+          </ng-container>
 
-        <!-- Cajero -->
-        <ng-container matColumnDef="email_cajero">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Cajero</th>
-          <td mat-cell *matCellDef="let row"> {{row.email_cajero }} </td>
-        </ng-container>
+          <!-- Cajero -->
+          <ng-container matColumnDef="email_cajero">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Cajero</th>
+            <td mat-cell *matCellDef="let row">{{ row.email_cajero }}</td>
+          </ng-container>
 
-        <!-- Telefono -->
-        <ng-container matColumnDef="telefono">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Teléfono</th>
-          <td mat-cell *matCellDef="let row"> {{row.telefono}} </td>
-        </ng-container>
+          <!-- Telefono -->
+          <ng-container matColumnDef="telefono">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Teléfono</th>
+            <td mat-cell *matCellDef="let row">{{ row.telefono }}</td>
+          </ng-container>
 
+          <!-- Acciones -->
+          <ng-container matColumnDef="acciones">
+            <th class="text-right" mat-header-cell *matHeaderCellDef>
+              Acciones
+            </th>
+            <td mat-cell *matCellDef="let row" class="action-cell">
+              <div
+                class="flex justify-end items-center gap-2 *:flex *:justify-center *:items-center *:rounded-full *:p-2"
+              >
+                @if (permisoAcciones) {
+                <!-- <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-printer"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M17 17h2a2 2 0 0 0 2 -2v-4a2 2 0 0 0 -2 -2h-14a2 2 0 0 0 -2 2v4a2 2 0 0 0 2 2h2" /><path d="M17 9v-4a2 2 0 0 0 -2 -2h-6a2 2 0 0 0 -2 2v4" /><path d="M7 13m0 2a2 2 0 0 1 2 -2h6a2 2 0 0 1 2 2v4a2 2 0 0 1 -2 2h-6a2 2 0 0 1 -2 -2z" /></svg> -->
+                <button mat-button (click)="print(row.id)" color="accent">
+                  Imprimir Tarjeta
+                </button>
+                }
+              </div>
+            </td>
+          </ng-container>
 
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
 
-        <!-- Acciones -->
-        <ng-container matColumnDef="acciones">
-          <th class="text-right" mat-header-cell *matHeaderCellDef> Acciones </th>
-          <td mat-cell *matCellDef="let row" class="action-cell">
-            <div
-              class="flex justify-end items-center gap-2 *:flex *:justify-center *:items-center *:rounded-full *:p-2">
+          <!-- Row shown when there is no matching data. -->
+          <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell p-5" colspan="4">No hay coincidencias</td>
+          </tr>
+        </table>
+      </div>
 
-              @if (permisoAcciones) {
-              <!-- <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-printer"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M17 17h2a2 2 0 0 0 2 -2v-4a2 2 0 0 0 -2 -2h-14a2 2 0 0 0 -2 2v4a2 2 0 0 0 2 2h2" /><path d="M17 9v-4a2 2 0 0 0 -2 -2h-6a2 2 0 0 0 -2 2v4" /><path d="M7 13m0 2a2 2 0 0 1 2 -2h6a2 2 0 0 1 2 2v4a2 2 0 0 1 -2 2h-6a2 2 0 0 1 -2 -2z" /></svg> -->
-              <button mat-button (click)="print(row.id)" color="accent">Imprimir Tarjeta</button>
-              }
-            </div>
-          </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-
-        <!-- Row shown when there is no matching data. -->
-        <tr class="mat-row" *matNoDataRow>
-          <td class="mat-cell p-5" colspan="4">No hay coincidencias</td>
-        </tr>
-      </table>
-    </div>
-
-    <mat-paginator [length]="total" [pageSize]="perPage" [pageIndex]="currentPage" [pageSizeOptions]="[5, 10, 20]"
-      showFirstLastButtons (page)="onPaginateChange($event)">
-    </mat-paginator>
-  </ng-template>
+      <mat-paginator
+        [length]="total"
+        [pageSize]="perPage"
+        [pageIndex]="currentPage"
+        [pageSizeOptions]="[5, 10, 20]"
+        showFirstLastButtons
+        (page)="onPaginateChange($event)"
+      >
+      </mat-paginator>
+    </ng-template>
+  </div>
 </div>
-
-</div>
-
