--- a/src/app/pages/impresionManual/impresionManual.component.html
+++ b/src/app/pages/impresionManual/impresionManual.component.html
@@ -153,7 +153,7 @@
                 <span class="sr-only">Capture photo</span>
               </button>
 
-              <button (click)="printManual()" [disabled]="formulario.invalid || !capturedImage()"
+              <button (click)="printManual()" [disabled]="formulario.invalid || !capturedImage() || !selectedPrinter()"
                 class="rounded-full w-3/4 flex flex-col items-center justify-center bg-blue-500 hover:bg-blue-600 text-xs text-white text-center font-bold p-2 focus:outline-none focus:ring-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                   stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
